--- a/index.html
+++ b/index.html
@@ -1,82 +1,101 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Estrelas do Amanhã</title>
-    <link rel="stylesheet" href="styles/index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Inconsolata:wght@200..900&family=Maven+Pro:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="styles/index.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Inconsolata:wght@200..900&family=Maven+Pro:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div id="app">
-        <main>
-            <div class="main-container">
-                <div class="back">
-                    <img src="./Assets/icons/arrow-left-02.svg" alt="icone de voltar">
-                    <span>voltar</span>
+      <main>
+        <div class="main-container">
+          <div class="back">
+            <img src="./Assets/icons/arrow-left-02.svg" alt="icone de voltar" />
+            <span>voltar</span>
+          </div>
+          <h1>Formulário de matrícula</h1>
+          <p>
+            Preencha os dados abaixo para matricular seu filho na escola de
+            educação infantil Estrelas do Amanhã.
+          </p>
+          <form method="post" enctype="multipart/form-data">
+            <fieldset class="child-info">
+              <legend>Informações da criança</legend>
+
+              <div class="input-wrapper">
+                <label for="fullname">Nome completo</label>
+                <input
+                  id="fullname"
+                  name="fullname"
+                  type="text"
+                  placeholder="Qual o nome da criança"
+                />
+              </div>
+
+              <div class="input-wrapper">
+                <label for="birth">Data de nascimento</label>
+                <input type="date" id="birth" name="birth" lang="pt-br" />
+              </div>
+
+              <div class="select-wrapper">
+                <label for="gender">Sexo</label>
+                <select name="gender" id="gender">
+                  <option value="female">Feminino</option>
+                  <option value="male">Masculino</option>
+                  <option value="na">Prefiro não responder</option>
+                </select>
+
+                <div class="textarea-wrapper">
+                  <label for="medical-info">Informações médicas</label>
+                  <textarea
+                    name="medical-info"
+                    id="medical-info"
+                    cols="30"
+                    rows="10"
+                    placeholder="A criança possui alguma condição médica que a escola deve estar ciente ? (Se sim, esquecifique)"
+                  ></textarea>
                 </div>
-                <h1>Formulário de matrícula</h1>
-                <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
-                <form method="post" enctype="multipart/form-data">
-                    <fieldset class="child-info">
-                        <legend>Informações da criança</legend>
 
-                        <div class="input-wrapper">
-                            <label for="fullname">Nome completo</label>
-                            <input 
-                            id="fullname" name="fullname" type="text"
-                            placeholder="Qual o nome da criança">
-                         </div>
+                <div class="droparea-wrapper">
+                  <input type="file" id="birth-file" name="birth-file" />
+                  <img src="Assets/icons/cloud-upload.svg" alt="" />
+                  <p>
+                    clique aqui para <br />
+                    selecionar os arquivos
+                  </p>
+                </div>
+              </div>
+            </fieldset>
+          </form>
+        </div>
+      </main>
 
-                         <div class="input-wrapper">
-                            <label for="birth">Data de nascimento</label>
-                            <input type="date" id="birth" name="birth" lang="pt-br">
-                        </div>
-                        
-                        <div class="select-wrapper">
-                            <label for="gender">Sexo</label>
-                            <select name="gender" id="gender">
-                                <option value="female">Feminino</option>
-                                <option value="male">Masculino</option>
-                                <option value="na">Prefiro não responder</option>
-                            </select>
-
-                            <div class="textarea-wrapper">
-                                <label for="medical-info">Informações médicas</label>
-                                <textarea name="medical-info" id="medical-info" cols="30" rows="10"
-                                placeholder="A criança possui alguma condição médica que a escola deve estar ciente ? (Se sim, esquecifique)"></textarea>
-                            </div>
-
-                            <div class="droparea-wrapper">
-                                <input type="file" id="birth-file" name="birth-file">
-                                <img src="Assets/icons/cloud-upload.svg" alt="">
-                                <p>
-                                    clique aqui para <br>
-                                    selecionar os arquivos
-                                </p>
-
-                            </div>
-                        </div>
-                    </fieldset>
-                </form>
-            </div>
-        </main>
-
-        <aside>
-            <div class="aside-container">
-                <header>
-                    <img src="./Assets/Frame 48095956.svg" alt="logo estrelas do amanhã">
-                    <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
-                    <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
-                </header>
-                <img src="./Assets/Illustration.svg" alt="Ilistração de uma professora com crianças prestando atenção">
-            </div>
-        </aside>
-
-
+      <aside>
+        <div class="aside-container">
+          <header>
+            <img
+              src="./Assets/Frame 48095956.svg"
+              alt="logo estrelas do amanhã"
+            />
+            <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
+            <p>
+              Inscreva seu filho em nossa escola e veja-o florescer em um
+              ambiente acolhedor, seguro e estimulante.
+            </p>
+          </header>
+          <img
+            src="./Assets/Illustration.svg"
+            alt="Ilistração de uma professora com crianças prestando atenção"
+          />
+        </div>
+      </aside>
     </div>
-        
-</body>
+  </body>
 </html>
