--- a/index.html
+++ b/index.html
@@ -142,7 +142,31 @@
               <span>Insira um e-mail válido</span>
             </div>
           </div>
+        </fieldset>
 
+        <fieldset class="enroll-options">
+          <legend>Opções de matrícula</legend>
+
+          <div class="input-wrapper">
+            <label>Selecione o turno</label>
+
+            <div class="radio-wrapper">
+
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" name="study-shift" value="morning" id="morning">
+                <img src="Assets/icons/sun-cloud-02.svg" alt="icone de sol com nuvens">
+                <label for="morning">Manhã</label>
+              </div>
+
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" name="study-shift" value="morning" id="morning">
+                <img src="Assets/icons/sun-02.svg" alt="icone de sol">
+                <label for="morning">Tarde</label>
+              </div>
+            </div>
+          </div>
         </fieldset>
           </form>
         </div>
