--- a/index.html
+++ b/index.html
@@ -167,6 +167,56 @@
               </div>
             </div>
           </div>
+
+          <div class="input-wrapper">
+            <label>Em qual esporte você gostaria de inscrever seu filho?</label>
+
+            <div class="radio-wrapper">
+
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" name="sport" id="football">
+                <img src="./Assets/icons/football.svg" alt="icone de futebol">
+                <label for="football">Futebol</label>
+              </div>
+
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" name="sport" id="basketball">
+                <img src="./Assets/icons/basketball-02.svg" alt="icone de basquete">
+                <label for="basketball">Basquete</label>
+              </div>
+
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" name="sport" id="swimming">
+                <img src="./Assets/icons/swimming.svg" alt="icone de natação">
+                <label for="swimming">Natação</label>
+              </div>
+
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" name="sport" id="yoga">
+                <img src="./Assets/icons/yoga-02.svg" alt="icone de yoga">
+                <label for="football">Ioga</label>
+              </div>
+
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" name="sport" id="volleyball">
+                <img src="./Assets/icons/volleyball.svg" alt="icone de volleyball">
+                <label for="football">Volei</label>
+              </div>
+
+              <div class="radio-inner">
+                <div class="radio-image"></div>
+                <input type="radio" name="sport" id="boxing">
+                <img src="./Assets/icons/boxing-glove-01.svg" alt="icone de boxing">
+                <label for="football">Boxe</label>
+              </div>
+            </div>
+          </div>
+
         </fieldset>
           </form>
         </div>
